# distributed-systems-demo

./: .env  .gitignore  README.md  docker-compose.yml  poetry.md  pyproject.toml  requirements.txt  test_curl.md
.github/workflows/: python-app.yml
config/grafana/: Dockerfile
config/grafana/krakend/: dashboard.json
config/krakend/: krakend.json
items-service/: Dockerfile  pyproject.toml
items-service/items_service/: app.py  config.py  items.py  models.py  schema.py
items-service/tests/: test_items_service.py
kong/config/: kong.yaml
scripts/: build.sh
scripts/kong-db/: init.sh
